[package]
name = "dp_blockchain4"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
num-bigint = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.65"
nut = "0.1.0"
clap = "2.33.3"